--- a/CloudwatchPreferences/Resources/English.lproj/MainMenu.xib
+++ b/CloudwatchPreferences/Resources/English.lproj/MainMenu.xib
@@ -2,18 +2,18 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10H574</string>
+		<string key="IBDocument.SystemVersion">10J567</string>
 		<string key="IBDocument.InterfaceBuilderVersion">823</string>
 		<string key="IBDocument.AppKitVersion">1038.35</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.HIToolboxVersion">462.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">823</string>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="537"/>
 			<integer value="371"/>
-			<integer value="535"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -844,10 +844,15 @@
 			<object class="NSUserDefaultsController" id="1015869286">
 				<object class="NSMutableArray" key="NSDeclaredKeys">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>kPreferencesRefreshIntervalKey</string>
-					<string>refreshInterval</string>
+					<object class="NSMutableString">
+						<characters key="NS.bytes">awsAccessKeyId</characters>
+					</object>
+					<string>secureAwsAccessKeyId</string>
 				</object>
 				<bool key="NSSharedInstance">YES</bool>
+			</object>
+			<object class="NSCustomObject" id="689992400">
+				<string key="NSClassName">Keychain</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -1175,15 +1180,15 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: values.awsAccessKeyId</string>
+						<string key="label">value: awsAccessKeyId</string>
 						<reference key="source" ref="558377600"/>
-						<reference key="destination" ref="1015869286"/>
+						<reference key="destination" ref="689992400"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="558377600"/>
-							<reference key="NSDestination" ref="1015869286"/>
-							<string key="NSLabel">value: values.awsAccessKeyId</string>
+							<reference key="NSDestination" ref="689992400"/>
+							<string key="NSLabel">value: awsAccessKeyId</string>
 							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">values.awsAccessKeyId</string>
+							<string key="NSKeyPath">awsAccessKeyId</string>
 							<object class="NSDictionary" key="NSOptions">
 								<string key="NS.key.0">NSContinuouslyUpdatesValue</string>
 								<boolean value="YES" key="NS.object.0"/>
@@ -1191,19 +1196,19 @@
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">607</int>
+					<int key="connectionID">615</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: values.awsSecretAccessKey</string>
+						<string key="label">value: awsSecretAccessKey</string>
 						<reference key="source" ref="878849801"/>
-						<reference key="destination" ref="1015869286"/>
+						<reference key="destination" ref="689992400"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="878849801"/>
-							<reference key="NSDestination" ref="1015869286"/>
-							<string key="NSLabel">value: values.awsSecretAccessKey</string>
+							<reference key="NSDestination" ref="689992400"/>
+							<string key="NSLabel">value: awsSecretAccessKey</string>
 							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">values.awsSecretAccessKey</string>
+							<string key="NSKeyPath">awsSecretAccessKey</string>
 							<object class="NSDictionary" key="NSOptions">
 								<string key="NS.key.0">NSContinuouslyUpdatesValue</string>
 								<boolean value="YES" key="NS.object.0"/>
@@ -1211,7 +1216,7 @@
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">608</int>
+					<int key="connectionID">617</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1764,6 +1769,11 @@
 						<reference key="object" ref="952057144"/>
 						<reference key="parent" ref="463796002"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">613</int>
+						<reference key="object" ref="689992400"/>
+						<reference key="parent" ref="0"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1897,6 +1907,7 @@
 					<string>593.IBPluginDependency</string>
 					<string>593.IBViewBoundsToFrameTransform</string>
 					<string>594.IBPluginDependency</string>
+					<string>613.IBPluginDependency</string>
 					<string>73.IBPluginDependency</string>
 					<string>73.ImportedFromIB2</string>
 					<string>81.IBEditorWindowLastContentRect</string>
@@ -1978,7 +1989,7 @@
 					<string>{{312, 800}, {616, 0}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{672, 261}, {518, 250}}</string>
+					<string>{{678, 238}, {518, 250}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
@@ -2066,6 +2077,7 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
 					<string>{{949, 720}, {115, 23}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -2093,7 +2105,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">608</int>
+			<int key="maxID">617</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2182,6 +2194,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/AppDelegate.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">Keychain</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/Keychain.h</string>
 					</object>
 				</object>
 			</object>
