--- a/ElasticPreferences/Resources/English.lproj/MainMenu.xib
+++ b/ElasticPreferences/Resources/English.lproj/MainMenu.xib
@@ -842,17 +842,10 @@
 				<string key="NSClassName">NSView</string>
 			</object>
 			<object class="NSUserDefaultsController" id="1015869286">
-				<object class="NSMutableArray" key="NSDeclaredKeys">
-					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="NSMutableString">
-						<characters key="NS.bytes">awsAccessKeyId</characters>
-					</object>
-					<string>secureAwsAccessKeyId</string>
-				</object>
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
 			<object class="NSCustomObject" id="689992400">
-				<string key="NSClassName">Keychain</string>
+				<string key="NSClassName">KeychainController</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -1217,6 +1210,14 @@
 						</object>
 					</object>
 					<int key="connectionID">617</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">keychainController</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="689992400"/>
+					</object>
+					<int key="connectionID">618</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1973,10 +1974,10 @@
 					<integer value="1"/>
 					<string>{74, 862}</string>
 					<string>{{6, 978}, {478, 20}}</string>
-					<string>{{722, 571}, {518, 250}}</string>
+					<string>{{134, 94}, {518, 250}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{722, 571}, {518, 250}}</string>
-					<integer value="1"/>
+					<string>{{134, 94}, {518, 250}}</string>
+					<boolean value="NO"/>
 					<string>{{33, 99}, {480, 360}}</string>
 					<string>{3.40282e+38, 3.40282e+38}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1989,7 +1990,7 @@
 					<string>{{312, 800}, {616, 0}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{678, 238}, {518, 250}}</string>
+					<string>{{755, 399}, {518, 250}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
@@ -2105,7 +2106,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">617</int>
+			<int key="maxID">618</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2152,6 +2153,7 @@
 							<string>advancedPane</string>
 							<string>awsAccessKeyIdField</string>
 							<string>generalPane</string>
+							<string>keychainController</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -2159,6 +2161,7 @@
 							<string>NSView</string>
 							<string>NSTextField</string>
 							<string>NSView</string>
+							<string>KeychainController</string>
 							<string>NSWindow</string>
 						</object>
 					</object>
@@ -2169,6 +2172,7 @@
 							<string>advancedPane</string>
 							<string>awsAccessKeyIdField</string>
 							<string>generalPane</string>
+							<string>keychainController</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -2186,6 +2190,10 @@
 								<string key="candidateClassName">NSView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
+								<string key="name">keychainController</string>
+								<string key="candidateClassName">KeychainController</string>
+							</object>
+							<object class="IBToOneOutletInfo">
 								<string key="name">window</string>
 								<string key="candidateClassName">NSWindow</string>
 							</object>
@@ -2197,11 +2205,11 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">Keychain</string>
+					<string key="className">KeychainController</string>
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/Keychain.h</string>
+						<string key="minorKey">Classes/KeychainController.h</string>
 					</object>
 				</object>
 			</object>
@@ -2774,7 +2782,7 @@
 			<integer value="3000" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
-		<string key="IBDocument.LastKnownRelativeProjectPath">../../CloudwatchPreferences.xcodeproj</string>
+		<string key="IBDocument.LastKnownRelativeProjectPath">../../ElasticPreferences.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<bool key="EncodedWithXMLCoder">YES</bool>
