--- a/ElasticsPreferences/Resources/English.lproj/MainMenu.xib
+++ b/ElasticsPreferences/Resources/English.lproj/MainMenu.xib
@@ -44,7 +44,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="NSMenuItem" id="694149608">
 						<reference key="NSMenu" ref="649796088"/>
-						<string key="NSTitle">Elastic Preferences</string>
+						<string key="NSTitle">Elastics Preferences</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSKeyEquivModMask">1048576</int>
 						<int key="NSMnemonicLoc">2147483647</int>
@@ -58,12 +58,12 @@
 						</object>
 						<string key="NSAction">submenuAction:</string>
 						<object class="NSMenu" key="NSSubmenu" id="110575045">
-							<string key="NSTitle">Elastic Preferences</string>
+							<string key="NSTitle">Elastics Preferences</string>
 							<object class="NSMutableArray" key="NSMenuItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="NSMenuItem" id="238522557">
 									<reference key="NSMenu" ref="110575045"/>
-									<string key="NSTitle">About Elastic</string>
+									<string key="NSTitle">About Elastics</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="35465992"/>
@@ -110,7 +110,7 @@
 								</object>
 								<object class="NSMenuItem" id="755159360">
 									<reference key="NSMenu" ref="110575045"/>
-									<string key="NSTitle">Hide Elastic Preferences</string>
+									<string key="NSTitle">Hide Elastics Preferences</string>
 									<string key="NSKeyEquiv">h</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -148,7 +148,7 @@
 								</object>
 								<object class="NSMenuItem" id="632727374">
 									<reference key="NSMenu" ref="110575045"/>
-									<string key="NSTitle">Quit Elastic Preferences</string>
+									<string key="NSTitle">Quit Elastics Preferences</string>
 									<string key="NSKeyEquiv">q</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -314,7 +314,7 @@
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="NSMenuItem" id="105068016">
 									<reference key="NSMenu" ref="992780483"/>
-									<string key="NSTitle">Elastic Preferences Help</string>
+									<string key="NSTitle">Elastics Preferences Help</string>
 									<string key="NSKeyEquiv">?</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -333,7 +333,7 @@
 				<int key="NSWindowBacking">2</int>
 				<string key="NSWindowRect">{{703, 451}, {518, 250}}</string>
 				<int key="NSWTFlags">1954022400</int>
-				<string key="NSWindowTitle">Elastic Preferences</string>
+				<string key="NSWindowTitle">Elastics Preferences</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<object class="NSToolbar" key="NSViewClass" id="634806124">
 					<object class="NSMutableString" key="NSToolbarIdentifier">
@@ -423,7 +423,7 @@
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1058}}</string>
 				<string key="NSMaxSize">{1.79769e+308, 1.79769e+308}</string>
-				<string key="NSFrameAutosaveName">Elastic Preferences</string>
+				<string key="NSFrameAutosaveName">Elastics Preferences</string>
 			</object>
 			<object class="NSCustomView" id="146184991">
 				<reference key="NSNextResponder"/>
@@ -909,7 +909,7 @@
 				<int key="NSWindowBacking">2</int>
 				<string key="NSWindowRect">{{196, 339}, {254, 171}}</string>
 				<int key="NSWTFlags">1677722624</int>
-				<string key="NSWindowTitle">About Elastic</string>
+				<string key="NSWindowTitle">About Elastics</string>
 				<string key="NSWindowClass">NSPanel</string>
 				<nil key="NSViewClass"/>
 				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
@@ -941,7 +941,7 @@
 								<int key="NSCellFlags2">33554432</int>
 								<object class="NSCustomResource" key="NSContents">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">ElasticIcon</string>
+									<string key="NSResourceName">ElasticsIcon</string>
 								</object>
 								<int key="NSAlign">0</int>
 								<int key="NSScale">0</int>
@@ -959,7 +959,7 @@
 							<object class="NSTextFieldCell" key="NSCell" id="503685713">
 								<int key="NSCellFlags">68288064</int>
 								<int key="NSCellFlags2">138413056</int>
-								<string key="NSContents">Elastic</string>
+								<string key="NSContents">Elastics</string>
 								<object class="NSFont" key="NSSupport">
 									<string key="NSName">LucidaGrande-Bold</string>
 									<double key="NSSize">14</double>
@@ -3536,14 +3536,14 @@
 			<integer value="3000" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
-		<string key="IBDocument.LastKnownRelativeProjectPath">../../ElasticPreferences.xcodeproj</string>
+		<string key="IBDocument.LastKnownRelativeProjectPath">../../ElasticsPreferences.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>EU</string>
-				<string>ElasticIcon</string>
+				<string>ElasticsIcon</string>
 				<string>NSMenuCheckmark</string>
 				<string>NSMenuMixedState</string>
 				<string>NSPreferencesGeneral</string>
